# harry-potter-textadventure

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  make_release.sh  run_clangformat.sh  run_cppcheck.sh
cmake/: conan.cmake
code/: .ycm_extra_conf.py
code/hpta-app/: CMakeLists.txt  main.cpp
code/hpta-editor/: CMakeLists.txt
code/hpta-editor/include/: panel_room_attributes.hpp  panel_room_selector.hpp  room_list.hpp  settings.hpp
code/hpta-editor/include/hpta-editor/: event_engine.hpp  ievent_handler.hpp  ipanel.hpp  map.hpp  map_navigation.hpp  object_cache.hpp  panel_item_attributes.hpp  panel_item_list.hpp  panel_room_attributes.hpp  panel_room_list.hpp  room_list.hpp  settings.hpp
code/hpta-editor/src/: base_window.hpp  event_engine.cpp  event_engine.hpp  hpta_imgui.cpp  hpta_imgui.hpp  ievent_handler.hpp  ipanel.hpp  main.cpp  map.cpp  map.hpp  map_navigation.cpp  map_navigation.hpp  object_cache.cpp  object_cache.hpp  panel_base.hpp  panel_item_attributes.cpp  panel_item_attributes.hpp  panel_item_list.cpp  panel_item_list.hpp  panel_items.cpp  panel_items.hpp  panel_room_attributes.cpp  panel_room_attributes.hpp  panel_room_list.cpp  panel_room_list.hpp  panel_room_selector.cpp  panel_rooms.cpp  panel_rooms.hpp  panel_spells.cpp  panel_spells.hpp  room_list.cpp  settings.cpp  settings.hpp  utils.hpp  window_base.hpp  window_items.cpp  window_items.hpp  window_rooms.cpp  window_rooms.hpp  window_spells.cpp  (+1 more)
code/hpta-lib/: CMakeLists.txt
code/hpta-lib/include/: directions.hpp  interpreter.hpp  test_header.hpp  visualizer.hpp
code/hpta-lib/include/commands/: help.hpp  icommand.hpp  inventory.hpp  look.hpp  take.hpp  walk.hpp
code/hpta-lib/include/hpta-lib/: context.hpp  interpreter.hpp  screen.hpp  visualizer.hpp
code/hpta-lib/include/hpta-lib/commands/: cast.hpp  give.hpp  help.hpp  icommand.hpp  inventory.hpp  look.hpp  say.hpp  take.hpp  use.hpp  walk.hpp
code/hpta-lib/include/hpta-lib/objects/: actions.hpp  gameobject.hpp  item.hpp  item_storage.hpp  npc.hpp  player.hpp  room.hpp  spell.hpp  spell_skill.hpp  storage.hpp
code/hpta-lib/include/hpta-lib/persistency/: item_persistency.hpp  json_filehandler.hpp  persistency.hpp  room_persistency.hpp
code/hpta-lib/include/hpta-lib/screen/: iscreen.hpp  screen_terminal.hpp
code/hpta-lib/include/hpta-lib/services/: cache_service.hpp  gameengine.hpp  persistence.hpp  player_walk_service.hpp  registry.hpp  room_cache_service.hpp  service_registry.hpp  user_interaction_service.hpp
code/hpta-lib/include/hpta-lib/util/: hpta_algorithms.hpp  hpta_config.hpp  hpta_strings.hpp
code/hpta-lib/include/objects/: item.hpp  item_storage.hpp  player.hpp  room.hpp
code/hpta-lib/include/persistency/: item_persistency.hpp  room_persistency.hpp
code/hpta-lib/include/services/: gameengine.hpp  persistence.hpp  registry.hpp
code/hpta-lib/include/util/: hpta_strings.hpp
code/hpta-lib/src/: interpreter.cpp  screen.cpp  visualizer.cpp
code/hpta-lib/src/commands/: cast.cpp  help.cpp  inventory.cpp  look.cpp  say.cpp  take.cpp  use.cpp  walk.cpp
code/hpta-lib/src/objects/: actions.cpp  item_storage.cpp  storage.cpp
code/hpta-lib/src/persistency/: item_persistency.cpp  json_filehandler.hpp  npc_persistency.cpp  room_persistency.cpp  spell_persistency.cpp
code/hpta-lib/src/screen/: screen_terminal.cpp
code/hpta-lib/src/services/: gameengine.cpp  persistence.cpp  player_walk_service.cpp  registry.cpp  room_cache_service.cpp
code/hpta-lib/src/util/: hpta_config.cpp  hpta_string.cpp
config/: hpta-editor.conf
docs/: diagram.plantuml
gamedata/items/: buch-basilisk.json  buch-irrwichte.json  eulenfeder.json  knut.json  schachfigur_bauer.json
gamedata/npcs/: tom_vom_tropfenden_kessel.json
gamedata/rooms/winkelgasse/: eeylops_eulenkaufhaus.json  florean-fortescues-eissalon.json  madam-malkins-anzuege.json  potages_kesselladen.json  qualitaet_fuer_quidditch.json  second-hand-buecherladen.json  winkelgassenstrasse_1.json  winkelgassenstrasse_2.json  winkelgassenstrasse_3.json  winkelgassenstrasse_4.json  zum_tropfenden_kessel.json
gamedata/spells/: alohomora.json  aparecium.json  diffindo.json  incendio.json  reparo.json
test/: CMakeLists.txt  test_hpta_utils.cpp  test_item_storage.cpp
test/persistency/: persistency_testfixture.hpp  test_persistency.cpp
